src/test/ui/type-alias-impl-trait/generic_duplicate_param_use4.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/generic_duplicate_param_use4.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_param_use4.rs:13:27
   |
LL | fn one<T: Debug>(t: T) -> Two<T, T> {
   |                           ^^^^^^^^^
   |
note: type used multiple times
  --> $DIR/generic_duplicate_param_use4.rs:11:10
   |
LL | type Two<T, U> = impl Debug;
   |          ^  ^

error: aborting due to previous error; 1 warning emitted

